fix: align bug in gen-tools

--- a/src/styles/modules/gen-tools.css
+++ b/src/styles/modules/gen-tools.css
@@ -38,7 +38,7 @@
   }
 
   .gen-tools ul {
-    flex-direction: column;
+    flex-wrap: wrap;
   }
 
   .gen-tools li {
